
	* ARTXX-00-01-04-main-00-04-object-01-13-alias-04-persistent-02-member-01:
	  Child branch created for the sake of revising the 
	  member_instance_reference system.  
	  Testing to see if member_instance_reference_base
	  really requires simple_instance_reference as the base type, 
	  should really be generic.
	  (a few connect tests will still die until announced otherwise)


2005-02-18	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-04-persistent-01:
	  Subtype template classes for alias_connection s are enabled, 
	  everything compiles, but there is some difficulty with 
	  persistent type registration: the hash_key's are not retrieved
	  properly by calls to static persistent_traits<T>::get_hash_key.
	  Solution: we need proper specialization of persistent_traits, 
	  which currently isn't done because type-keys are only registered
	  dynamically by static objects, hence specialized definitions
	  do not exist.  This branch will remedy this by using specialization
	  and dynamic registration (for unique ID).  
	  This initial revision compiles, but some tests will die while
	  modifications are in transient state.  

	+ -persistent-02:
	  Overhauled persistent type registration as promised.  
	  Compiles, runs most tests, some unexpected deaths in 
	  tests/parser/connect.  Must sleep first...
	  Deaths related to datatype_member_instance_references.


2005-02-18	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-04:
	  Draft of template code for alias_connection.  
	  Need to write instance_reference_base::make_alias_connection
	  before enabling new class heirarchy (conditional now).
	  Happened to do some header clean-up in this revision too.  


2005-02-17	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-01:
	  New branch created for working on alias_connections.  
	  May require some serious reworking and sub-typing.  